--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- ===============================================-->
     <main class="main" id="top">
       <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3 d-block" data-navbar-on-scroll="data-navbar-on-scroll">
-        <div class="container"><a class="navbar-brand d-inline-flex" href="index-en.html"><img class="d-inline-block" src="assets/img/gallery/logo.png" alt="logo" /><span class="text-1000 fs-0 fw-bold ms-2 align-self-center">الجوهرى</span></a>
+        <div class="container"><a class="navbar-brand d-inline-flex" href="index-en.html"><img class="d-inline-block"width="60px" src="assets/img/gallery/logo.png" alt="logo" /><span class="text-1000 fs-0 fw-bold ms-2 align-self-center">الجوهرى</span></a>
           <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0 " id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
@@ -2984,8 +2984,8 @@
       <section class="py-0 pb-8">
 
         <div class="container-fluid container-lg">
-          <div class="row h-100 g-2 justify-content-center">
-            <div class="col-sm-9 col-md-4 mb-3 mb-md-0 h-100">
+          <div class="row  g-2 justify-content-center align-items-stretch">
+            <div class="col-sm-9 col-md-4 mb-3 mb-md-0 ">
               <div class="card card-span text-white h-100"><img class="img-card h-100" src="assets/img/gallery/shoes-blog-1.png" alt="..." />
                 <div class="card-body px-xl-5 px-md-3 pt-0 pb-7">
                   <div class="d-flex justify-content-between align-items-center bg-100 mt-n5 me-auto"><img src="assets/img/gallery/author-1.png" width="60" alt="..." />
@@ -2998,7 +2998,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-9 col-md-4 mb-3 mb-md-0 h-100">
+            <div class="col-sm-9 col-md-4 mb-3 mb-md-0 ">
               <div class="card card-span text-white h-100"><img class="img-card h-100" src="assets/img/gallery/fashion-blog-2.png" alt="..." />
                 <div class="card-body px-xl-5 px-md-3 pt-0 pb-7">
                   <div class="d-flex justify-content-between align-items-center bg-100 mt-n5 me-auto"><img src="assets/img/gallery/author-2.png" width="60" alt="..." />
@@ -3011,7 +3011,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-9 col-md-4 mb-3 mb-md-0 h-100">
+            <div class="col-sm-9 col-md-4 mb-3 mb-md-0 ">
               <div class="card card-span text-white h-100"><img class="img-card h-100" src="assets/img/gallery/spring-dress-blog-3.png" alt="..." />
                 <div class="card-body px-xl-5 px-md-3 pt-0 pb-7">
                   <div class="d-flex justify-content-between align-items-center bg-100 mt-n5 me-auto"><img src="assets/img/gallery/author-3.png" width="60" alt="..." />
